rust/tests/snapshots/help/sources__create.snap
---
source: tests/cli/snapshots.rs
---
Create a new data source

Usage: vendo sources create [OPTIONS] --app <appId> --sync-type <syncType>

Options:
      --app <appId>           App ID (must have source role)
      --sync-type <syncType>  Connector type (e.g. google_ads)
      --import-tasks <tasks>  Comma-separated import task IDs (streams to pull)
      --frequency <value>     Sync frequency value [default: 24]
      --unit <unit>           Sync frequency unit (hours, days) [default: hours]
      --config-file <path>    Path to a JSON file with source-specific config
      --run-now               Trigger an initial sync immediately after creation
      --json                  Output raw JSON
      --output <field>        Print a single field (e.g. id)
  -h, --help                  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo sources create --app <appId> --sync-type google_ads
  $ vendo sources create --app <appId> --sync-type shopify --import-tasks orders,customers --run-now
