rust/tests/snapshots/help/sources__delete.snap
---
source: tests/cli/snapshots.rs
---
Delete a data source (soft delete)

Usage: vendo sources delete [OPTIONS] <sourceId>

Arguments:
  <sourceId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -y, --yes             Skip confirmation prompt
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo sources delete <sourceId>
  $ vendo sources delete <sourceId> --yes
  $ vendo sources delete <sourceId> --dry-run
