rust/tests/snapshots/help/sources__list.snap
---
source: tests/cli/snapshots.rs
---
List all data sources

Usage: vendo sources list [OPTIONS]

Options:
      --profile <name>  Use a specific account profile
      --state <state>   Filter by state (active, inactive)
      --debug           Enable verbose request diagnostics
      --type <type>     Filter by sync type
      --app <appId>     Filter by app ID
      --limit <n>       Number of results [default: 20]
      --offset <n>      Pagination offset [default: 0]
      --json            Output raw JSON
      --output <field>  Print a single field per row (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo sources list
  $ vendo sources list --state active
  $ vendo sources list --output id
