rust/tests/snapshots/help/sources__update.snap
---
source: tests/cli/snapshots.rs
---
Update a data source

Usage: vendo sources update [OPTIONS] <sourceId>

Arguments:
  <sourceId>  

Options:
      --import-tasks <tasks>  Comma-separated import task IDs
      --frequency <value>     Sync frequency value
      --unit <unit>           Sync frequency unit (hours, days)
      --config-file <path>    Replace config from a JSON file
      --json                  Output raw JSON
      --output <field>        Print a single field (e.g. id)
  -h, --help                  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo sources update <sourceId> --frequency 6 --unit hours
  $ vendo sources update <sourceId> --import-tasks orders,customers
